--- a/src/App.css
+++ b/src/App.css
@@ -165,6 +165,14 @@ footer h3{
   grid-template-columns: 1fr 1fr;
   gap: 10px;
   margin-bottom: 1%;
+  text-align: center;
+  cursor: pointer;
+  font-weight: 500;
+  border-radius: 0.5em;
+  -webkit-border-radius: 0.5em;
+  -moz-border-radius: 0.5em;
+  -ms-border-radius: 0.5em;
+  -o-border-radius: 0.5em;
 }
 
 .mainQuestion{
