--- a/src/App.css
+++ b/src/App.css
@@ -11,9 +11,8 @@ body{
 }
 
 main{
- background: url(../background1.png) center;
- background-size: cover;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   border-radius: 1em;
@@ -24,6 +23,78 @@ main{
   padding: 3vh 0vw;
   max-width: 992px;
   margin: 0 auto;
+}
+
+.toggler{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 40%;
+  margin-bottom: 5%;
+  height: 25px;
+}
+
+.color-toggler{
+  width: 50px;
+  border: 1px solid #383839;
+  background-color: #383839;
+  border-radius: 1em;
+  -webkit-border-radius: 1em;
+  -moz-border-radius: 1em;
+  -ms-border-radius: 1em;
+  -o-border-radius: 1em;
+  padding: 2px;
+  height: 100%;
+  display: flex;
+}
+
+.color-toggler-dark{
+  width: 50px;
+  border: 1px solid #f5f5f5;
+  background-color: #f5f5f5;
+  border-radius: 1em;
+  -webkit-border-radius: 1em;
+  -moz-border-radius: 1em;
+  -ms-border-radius: 1em;
+  -o-border-radius: 1em;
+  padding: 2px;
+  height: 100%;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.toggler-slider{
+  width: 20px;
+  background-color: #f5f5f5;
+  border: 1px solid #f5f5f5;
+  height: 100%;
+  border-radius: 1em;
+  -webkit-border-radius: 1em;
+  -moz-border-radius: 1em;
+  -ms-border-radius: 1em;
+  -o-border-radius: 1em;
+}
+
+.toggler-slider-dark{
+  width: 20px;
+  background-color: #2b2d2f;
+  border: 1px solid #2b2d2f;
+  height: 100%;
+  border-radius: 1em;
+  -webkit-border-radius: 1em;
+  -moz-border-radius: 1em;
+  -ms-border-radius: 1em;
+  -o-border-radius: 1em;
+}
+
+.toggler-item{
+  color: #293264;
+  font-size: 1.3em;
+}
+
+.toggler-item-dark{
+  color: #f5f5f5;
+  font-size: 1.3em;
 }
 
 .firstPage{
@@ -51,6 +122,38 @@ main{
   -ms-border-radius: 1em;
   -o-border-radius: 1em;
   color: #F5F7FB;
+  font-size: 1rem;
+  font-weight: 600;
+  letter-spacing: 1px;
+  margin-top: 5%;
+}
+
+.firstPage-dark{
+  text-align: center;
+}
+
+.firstPage-dark h1{
+  color: #6ED8EF;
+  letter-spacing: 1px;
+  padding: 5%;
+}
+
+.firstPage-dark p{
+  font-size: 1.1rem;
+  margin: 0% 0px 5%;
+  color: #6ED8EF;
+}
+
+.firstPage-dark button{
+  background-color: #6ED8EF;
+  border: 1px solid #6ED8EF;
+  padding: 5% 15%;
+  border-radius: 1em;
+  -webkit-border-radius: 1em;
+  -moz-border-radius: 1em;
+  -ms-border-radius: 1em;
+  -o-border-radius: 1em;
+  color: #383839;
   font-size: 1rem;
   font-weight: 600;
   letter-spacing: 1px;
@@ -112,10 +215,49 @@ footer h3{
   margin-top: 3%;
 }
 
+.checkAnswers-dark{
+  background-color: #6ED8EF;
+  border: 1px solid #6ED8EF;
+  padding: 3% 8%;
+  border-radius: 1em;
+  -webkit-border-radius: 1em;
+  -moz-border-radius: 1em;
+  -ms-border-radius: 1em;
+  -o-border-radius: 1em;
+  color: #383839;
+  font-size: 1rem;
+  font-weight: 600;
+  letter-spacing: 1px;
+  margin-top: 3%;
+}
+
 .play-again{
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.play-again-dark{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.play-again-dark button{
+  background-color: #6ED8EF;
+  border: 1px solid #6ED8EF;
+  padding: 3%;
+  border-radius: 1em;
+  -webkit-border-radius: 1em;
+  -moz-border-radius: 1em;
+  -ms-border-radius: 1em;
+  -o-border-radius: 1em;
+  color: #383839;
+  font-size: 1rem;
+  font-weight: 600;
+  letter-spacing: 1px;
+  width: 60%;
+  margin-top: 3%;
 }
 
 .play-again button{
@@ -133,6 +275,12 @@ footer h3{
   letter-spacing: 1px;
   width: 60%;
   margin-top: 3%;
+}
+
+.play-again-dark p{
+  color: #6ED8EF;
+  font-weight: 700;
+  font-size: 1.1rem;
 }
 
 .play-again p{
@@ -167,7 +315,7 @@ footer h3{
   margin-bottom: 1%;
   text-align: center;
   cursor: pointer;
-  font-weight: 500;
+  font-weight: 400;
   border-radius: 0.5em;
   -webkit-border-radius: 0.5em;
   -moz-border-radius: 0.5em;
@@ -182,6 +330,13 @@ footer h3{
   color: #293264;
 }
 
+.mainQuestion-dark{
+  font-weight: 700;
+  margin-bottom: 5%;
+  font-size: 1.1rem;
+  color: #A3DBE2;
+}
+
 @media screen and (min-width:992px) {
   .play-again{
     display: flex;
@@ -190,6 +345,21 @@ footer h3{
     align-items: center;
     width: 70%;
   }
+
+  .play-again-dark{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 70%;
+  }
+
+  .play-again-dark button{
+    padding: 2% 8%;
+    width: 40%;
+    margin-top: 0%;
+  }
+
   .play-again button{
     padding: 2% 8%;
     width: 40%;
@@ -199,6 +369,10 @@ footer h3{
     grid-template-columns: 1fr 1fr 1fr 1fr;
   }
   .checkAnswers{
+    padding: 2% 8%;
+  }
+
+  .checkAnswers-dark{
     padding: 2% 8%;
   }
 }
