--- a/src/App.css
+++ b/src/App.css
@@ -97,6 +97,32 @@ main{
   font-size: 1.3em;
 }
 
+form{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 5%;
+}
+
+form label{
+  font-weight: 500;
+  color: #4D5B9E;
+}
+
+select{
+  width: 100px;
+  background-color: #f5f5f5;
+  padding: 1% 3%;
+  font-size: 1.1rem;
+  font-weight: 500;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+  font-family: Rubik, sans-serif;
+}
+
 .firstPage{
   text-align: center;
 }
